grammar/.antlr/ArchDecisionParser.java
// Generated from d:/code vs/PLP/ArchDecision/grammar/ArchDecision.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class ArchDecisionParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		SYSTEM_TYPE=10, REQUIREMENT=11, LEVEL=12, ID=13, LINE_COMMENT=14, WS=15;
	public static final int
		RULE_program = 0, RULE_systemDecl = 1, RULE_typeDecl = 2, RULE_requirementsBlock = 3, 
		RULE_requirementItem = 4, RULE_constraintsBlock = 5, RULE_constraintItem = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "systemDecl", "typeDecl", "requirementsBlock", "requirementItem", 
			"constraintsBlock", "constraintItem"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'recommendation'", "'system'", "'type'", "'requirements'", "'{'", 
			"'}'", "'constraints'", "'team'", "'budget'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, "SYSTEM_TYPE", 
			"REQUIREMENT", "LEVEL", "ID", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "ArchDecision.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ArchDecisionParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public SystemDeclContext systemDecl() {
			return getRuleContext(SystemDeclContext.class,0);
		}
		public TypeDeclContext typeDecl() {
			return getRuleContext(TypeDeclContext.class,0);
		}
		public RequirementsBlockContext requirementsBlock() {
			return getRuleContext(RequirementsBlockContext.class,0);
		}
		public TerminalNode EOF() { return getToken(ArchDecisionParser.EOF, 0); }
		public ConstraintsBlockContext constraintsBlock() {
			return getRuleContext(ConstraintsBlockContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(14);
			systemDecl();
			setState(15);
			typeDecl();
			setState(16);
			requirementsBlock();
			setState(18);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(17);
				constraintsBlock();
				}
			}

			setState(20);
			match(T__0);
			setState(21);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SystemDeclContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(ArchDecisionParser.ID, 0); }
		public SystemDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_systemDecl; }
	}

	public final SystemDeclContext systemDecl() throws RecognitionException {
		SystemDeclContext _localctx = new SystemDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_systemDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(23);
			match(T__1);
			setState(24);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeDeclContext extends ParserRuleContext {
		public TerminalNode SYSTEM_TYPE() { return getToken(ArchDecisionParser.SYSTEM_TYPE, 0); }
		public TypeDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDecl; }
	}

	public final TypeDeclContext typeDecl() throws RecognitionException {
		TypeDeclContext _localctx = new TypeDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_typeDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(26);
			match(T__2);
			setState(27);
			match(SYSTEM_TYPE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RequirementsBlockContext extends ParserRuleContext {
		public List<RequirementItemContext> requirementItem() {
			return getRuleContexts(RequirementItemContext.class);
		}
		public RequirementItemContext requirementItem(int i) {
			return getRuleContext(RequirementItemContext.class,i);
		}
		public RequirementsBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirementsBlock; }
	}

	public final RequirementsBlockContext requirementsBlock() throws RecognitionException {
		RequirementsBlockContext _localctx = new RequirementsBlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_requirementsBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			match(T__3);
			setState(30);
			match(T__4);
			setState(32); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(31);
				requirementItem();
				}
				}
				setState(34); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==REQUIREMENT );
			setState(36);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RequirementItemContext extends ParserRuleContext {
		public TerminalNode REQUIREMENT() { return getToken(ArchDecisionParser.REQUIREMENT, 0); }
		public TerminalNode LEVEL() { return getToken(ArchDecisionParser.LEVEL, 0); }
		public RequirementItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_requirementItem; }
	}

	public final RequirementItemContext requirementItem() throws RecognitionException {
		RequirementItemContext _localctx = new RequirementItemContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_requirementItem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(REQUIREMENT);
			setState(39);
			match(LEVEL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstraintsBlockContext extends ParserRuleContext {
		public List<ConstraintItemContext> constraintItem() {
			return getRuleContexts(ConstraintItemContext.class);
		}
		public ConstraintItemContext constraintItem(int i) {
			return getRuleContext(ConstraintItemContext.class,i);
		}
		public ConstraintsBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraintsBlock; }
	}

	public final ConstraintsBlockContext constraintsBlock() throws RecognitionException {
		ConstraintsBlockContext _localctx = new ConstraintsBlockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constraintsBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(T__6);
			setState(42);
			match(T__4);
			setState(44); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(43);
				constraintItem();
				}
				}
				setState(46); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==T__7 || _la==T__8 );
			setState(48);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConstraintItemContext extends ParserRuleContext {
		public TerminalNode LEVEL() { return getToken(ArchDecisionParser.LEVEL, 0); }
		public ConstraintItemContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constraintItem; }
	}

	public final ConstraintItemContext constraintItem() throws RecognitionException {
		ConstraintItemContext _localctx = new ConstraintItemContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_constraintItem);
		try {
			setState(54);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(50);
				match(T__7);
				setState(51);
				match(LEVEL);
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 2);
				{
				setState(52);
				match(T__8);
				setState(53);
				match(LEVEL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}